crates/squealy/tests/compile_fail/in_subquery_type_mismatch.stderr
error[E0271]: type mismatch resolving `<PostTitle as ExprKind>::Value == i32`
  --> tests/compile_fail/in_subquery_type_mismatch.rs:26:17
   |
25 |               user.id.in_subquery(
   |                       ----------- required by a bound introduced by this call
26 | /                 sub.from::<Post>()
27 | |                     .select_subquery(|(post,)| post.title),
   | |__________________________________________________________^ type mismatch resolving `<PostTitle as ExprKind>::Value == i32`
   |
note: expected this to be `i32`
  --> tests/compile_fail/in_subquery_type_mismatch.rs:11:35
   |
11 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^
note: required by a bound in `ColumnRef::<'scope, K>::in_subquery`
  --> src/expr.rs
   |
   |     pub fn in_subquery<Sub>(
   |            ----------- required by a bound in this associated function
...
   |         Sub::OutputKind: ExprKind<Value = K::Value>,
   |                                   ^^^^^^^^^^^^^^^^ required by this bound in `ColumnRef::<'scope, K>::in_subquery`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
